--- a/substrate-front-end-template/package.json
+++ b/substrate-front-end-template/package.json
@@ -83,7 +83,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://substrate-developer-hub.github.io/substrate-front-end-template",
+  "homepage": "https://aviekakkar.github.io/Front-end-Javascript/",
   "bugs": {
     "url": "https://github.com/substrate-developer-hub/substrate-front-end-template/issues"
   },
